# up-android-example

./: settings.gradle
client/src/main/java/org/eclipse/uprotocol/example/client/: TestConstants.java
common/: build.gradle
common/src/main/java/org/eclipse/uprotocol/example/v1/: Example.java
common/src/main/java/org/eclipse/uprotocol/streamer/common/: Example.java
service/: build.gradle
service/src/main/: AndroidManifest.xml
service/src/main/java/org/eclipse/uprotocol/example/service/: ExampleService.java
service/src/main/java/org/eclipse/uprotocol/streamer/service/: NativeBridge.java  UListenerNativeBridge.java  UStreamerService.java
service/src/main/res/values/: strings.xml
service/src/main/rust/ustreamer_native_bridge/: Cargo.toml
service/src/main/rust/ustreamer_native_bridge/src/: lib.rs
